DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-10-07 aegis        Level loading
2002-10-01 nonchocoboy  The player is now an entity in full.
2002-10-01 nonchocoboy  RigidBody now aggregates its state so that it keeps
                        track of its state for the current frame as well as the
                        next frame.
2002-10-01 aegis        no more NullWeapon!!
2002-10-01 nonchocoboy  Fixed OpenSG rendering woes. Everything now has the
                        right color and texture.
                        NEW VERSION: 0.2.2
2002-09-30 aegis        bullet casings with random rotations
                        story state
                        bullet casings with different models than bullets
                        added Lou's music
                        draw a background image in the story state
2002-09-23 aegis        Gravity!
2002-09-22 nonchocoboy  Made the camera a flexible chase camera.
2002-09-20 nonchocoboy  Midworld compiles again in VisualStudio.NET
                        NEW VERSION: 0.2.1
2002-09-17 nonchocoboy  Merged in the opensg-branch to the HEAD. This completes
                        the initial iteration of adding OpenSG into Midworld as
                        the scene graph.
                        NEW VERSION: 0.2.0
2002-09-17 nonchocoboy  Added a resource manager to handle the details of
                        mapping resource names to their file names.
2002-09-17 nonchocoboy  Added caching semantics to the model manager.
2002-09-16 nonchocoboy  Added a model manager to consolidate OpenSG model
                        loading.
2002-09-16 nonchocoboy  Added in scene management using the OpenSG scenegraph.
2002-09-09 nonchocoboy  Removed dependency between states through the use of
                        a new StateFactory. States now invoke transitions to
                        each other by name and the factory creates the